deployments/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: welcome-service
spec:
  selector:
    app: welcome-app
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
