deployments/kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: welcome-app
  namespace: welcome-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: welcome.ardidafa.glanze.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: welcome-app
                port:
                  number: 80
